fix(common-library): use Paths.get to handle path correctly